--- a/templates/index.html
+++ b/templates/index.html
@@ -30,9 +30,12 @@
             </select>
             <p class="help-block">Destination repository to transplant revision set to.</p>
           </div>
-          <div class="form-group">
+          <div id="commit-form-group" class="form-group">
             <label for="commit">Commit ID</label>
             <input id="commit" name="commit" placeholder="Commit ID" required="required" type="text" class="form-control">
+            <span id="commit-info-progress" class="glyphicon glyphicon-refresh form-control-feedback hidden"></span>
+            <span id="commit-info-success" class="glyphicon glyphicon-ok  form-control-feedback hidden"></span>
+            <span id="commit-info-error" class="glyphicon glyphicon-remove form-control-feedback hidden"></span>
             <p class="help-block">Commit ID to transplant from source to destination repository.</p>
           </div>
           <div class="form-group">
@@ -48,6 +51,7 @@
     </div>
     <script type="text/javascript" src="//code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='main.js') }}"></script>
   </body>
 </html>
