--- a/templates/index.html
+++ b/templates/index.html
@@ -13,38 +13,71 @@
 </head>
   <body>
     <div class="container" style="margin-top: 1em">
-      <div class="jumbotron">
+      <div>
         <h1>Transplant</h1>
-        <form id="transplant-form" role="form" action="{{ url_for('transplant') }}" method="POST">
+        <form id="transplant-step-1" role="form">
+          <h2>Step 1: choose commits</h2>
           <div class="form-group">
-            <label for="source">Source</label>
+            <label for="source" class="control-label">Source</label>
             <select id="source" name="src" required="required" class="form-control">
               <option></option>
             </select>
             <p class="help-block">Source repository to transplant revision set from.</p>
           </div>
           <div class="form-group">
-            <label for="destination">Destination</label>
+            <label for="destination" class="control-label">Destination</label>
             <select id="destination" name="dst" required="required" class="form-control">
               <option></option>
             </select>
             <p class="help-block">Destination repository to transplant revision set to.</p>
           </div>
-          <div id="commit-form-group" class="form-group">
-            <label for="commit">Commit ID</label>
-            <input id="commit" name="commit" placeholder="Commit ID" required="required" type="text" class="form-control">
-            <span id="commit-info-progress" class="glyphicon glyphicon-refresh form-control-feedback hidden"></span>
-            <span id="commit-info-success" class="glyphicon glyphicon-ok  form-control-feedback hidden"></span>
-            <span id="commit-info-error" class="glyphicon glyphicon-remove form-control-feedback hidden"></span>
-            <p class="help-block">Commit ID to transplant from source to destination repository.</p>
+          <div id="revset-form-group" class="form-group">
+            <label for="revset" class="control-label">Revision Set</label>
+            <div class="row">
+              <div class="col-md-10">
+                <input id="revset" name="revset" placeholder="Revset" required="required" type="text" class="form-control" />
+              </div>
+              <div class="col-md-2">
+                <button id="revset-lookup" class="btn btn-block btn-primary disabled" data-loading-text="Loading..." >Go</button>
+              </div>
+            </div>
+            <p class="help-block">
+              Revision Set to transplant from source to destination repository,
+              see <a href="http://www.selenic.com/hg/help/revsets" target="_blank"><code>hg help revsets</code></a>
+            </p>
           </div>
-          <div class="form-group">
-            <label for="message">Commit message (optional)</label>
-            <textarea id="message" name="message" rows="3" class="form-control"></textarea>
+          <div>
+            <label>Commits</label>
+            <table id="table-commits" class="table table-condensed">
+              <thead>
+                <tr>
+                  <th>ID</th>
+                  <th>Date</th>
+                  <th>Author</th>
+                  <th>Message</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td colspan="4" class="text-center"><em>Fill in a Revision Set above to populate this table.</em></td>
+                </tr>
+              </tbody>
+            </table>
           </div>
-          <button id="transplant" data-loading-text="Transplanting..." type="submit" class="btn btn-primary btn-lg">Transplant</button>
+          <div class="text-right">
+            <button id="go-to-step-2" class="btn btn-primary btn-lg disabled">Next</button>
+          </div>
         </form>
-
+        <form id="transplant-step-2" role="form" class="hidden">
+          <h2>Step 2: edit commit messages</h2>
+          <h4>Source: <code id="step-2-src"></code></h4>
+          <h4>Destination: <code id="step-2-dst"></code></h4>
+          <h4>Revision Set: <code id="step-2-revset"></code></h4>
+          <div id="transplant-step-2-commits"></div>
+          <div class="text-right">
+            <button id="transplant" data-loading-text="Transplanting..." class="btn btn-primary btn-lg">Transplant</button>
+          </div>
+        </form>
         <p id="msgSuccess" class="text-success">Success</p>
         <p id="msgError" class="text-danger">Error</p>
       </div>
