--- a/static/main.css
+++ b/static/main.css
@@ -7,3 +7,7 @@
   margin-top: 1em;
   display: none;
 }
+
+textarea {
+  font-family: Menlo, Monaco, Consolas, "Courier New", monospace !important;
+}
