--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
   <script type="text/javascript">
     var RULES = {{ rules|tojson|safe }};
+    var REPOSITORIES = {{ repositories|tojson|safe }};
   </script>
 </head>
   <body>
