--- a/templates/index.html
+++ b/templates/index.html
@@ -65,8 +65,8 @@
               </tbody>
             </table>
           </div>
-          <div class="text-right">
-            <button id="go-to-step-2" class="btn btn-primary btn-lg disabled">Next</button>
+          <div>
+            <button id="go-to-step-2" class="btn btn-primary btn-lg pull-right disabled">Next</button>
           </div>
         </form>
         <form id="transplant-step-2" role="form" class="hidden">
@@ -74,8 +74,9 @@
           <h4>Source: <code id="step-2-src"></code></h4>
           <h4>Destination: <code id="step-2-dst"></code></h4>
           <div id="transplant-step-2-commits"></div>
-          <div class="text-right">
-            <button id="transplant" data-loading-text="Transplanting..." class="btn btn-primary btn-lg">Transplant</button>
+          <div class="clearfix">
+            <button id="go-to-step-1" class="btn btn-default btn-lg pull-left">Back</button>
+            <button id="transplant" data-loading-text="Transplanting..." class="btn btn-primary btn-lg pull-right">Transplant</button>
           </div>
         </form>
         <p id="msgSuccess" class="text-success">Success</p>
